--- a/default.project.json
+++ b/default.project.json
@@ -3,23 +3,21 @@
   "tree": {
     "$className": "DataModel",
     "ReplicatedStorage": {
+      "$className": "ReplicatedStorage",
       "OVHL_Shared": {
         "$path": "src/shared"
-      },
-      "Packages": {
-        "$path": "Packages"
       }
     },
     "ServerScriptService": {
+      "$className": "ServerScriptService", 
       "OVHL_Server": {
         "$path": "src/server"
-      },
-      "OVHL_Tests": {
-        "$path": "tests"
       }
     },
     "StarterPlayer": {
+      "$className": "StarterPlayer",
       "StarterPlayerScripts": {
+        "$className": "StarterPlayerScripts",
         "OVHL_Client": {
           "$path": "src/client"
         }
